theme.files の実装、コンテンツのパスの整理変更、他。

--- a/htdocs/_PX/themes/sample/default.html
+++ b/htdocs/_PX/themes/sample/default.html
@@ -3,24 +3,18 @@
 <head>
 <meta charset="UTF-8" />
 <title><?php print t::h($page_info['title']); ?> | <?php print t::h($px->get_conf('project.name')); ?></title>
-<meta name="keywords" content="<?php print t::h($page_info['keywords']); ?>" />
-<meta name="description" content="<?php print t::h($page_info['description']); ?>" />
-<script src="<?php print t::h($px->get_install_path()); ?>common/js/jquery-1.7.2.min.js" type="text/javascript"></script>
 <?php
-	print $px->ssi(implode('/',array($px->get_install_path(),'/common/inc/common_setup.inc')));
-?>
-<link rel="stylesheet" href="<?php print t::h($px->get_install_path()); ?>common/css/common.css" type="text/css" />
-<?php
+	include( $px->get_theme_resource_dir_realpath().'inc/setup.inc' );
 	print $px->theme()->pull_content('head');
 ?>
 </head>
 <body>
-<div class="outline" id="pagetop">
-<div class="header">
-	<div class="logo"><a href="<?php print t::h( $px->get_install_path() ); ?>"><?php print t::h($px->get_conf('project.name')); ?></a> (THEME=sample)</div>
-</div><!-- /.header -->
-<div class="middle">
-<div class="column1">
+<div class="theme_outline" id="pagetop">
+<div class="theme_header">
+	<div class="logo"><a href="<?php print t::h( $px->get_install_path() ); ?>"><?php print t::h($px->get_conf('project.name')); ?></a></div>
+</div><!-- /.theme_header -->
+<div class="theme_middle">
+<div class="theme_column1">
 <h1><?php print t::h( $page_info['title_h1'] ); ?></h1>
 <div id="content" class="contents">
 
@@ -29,9 +23,9 @@
 ?>
 
 </div><!-- /#content -->
-</div><!-- /.column1 -->
-<div class="column2">
-<div class="localnavi">
+</div><!-- /.theme_column1 -->
+<div class="theme_column2">
+<div class="theme_localnavi">
 <?php if( $px->site()->get_page_info($px->req()->get_request_file_path(),'id') ){ ?>
 <div><?php print $px->theme()->mk_link($px->site()->get_parent($px->req()->get_request_file_path())); ?></div>
 <?php } ?>
@@ -60,14 +54,14 @@
 <?php }//foreach ?>
 </ul>
 <?php }//if ?>
-</div><!-- /.localnavi -->
-</div><!-- /.column2 -->
-</div><!-- /.middle -->
-<div class="footer">
+</div><!-- /.theme_localnavi -->
+</div><!-- /.theme_column2 -->
+</div><!-- /.theme_middle -->
+<div class="theme_footer">
 	<div class="right small">[<a href="#pagetop">ページの先頭へ戻る</a>]</div>
 	<div class="breadcrumb"><?php print $px->theme()->mk_breadcrumb(); ?></div>
 	<div class="center">[<?php print $px->theme()->mk_link('/'); ?>]</div>
-</div><!-- /.footer -->
-</div><!-- /.outline -->
+</div><!-- /.theme_footer -->
+</div><!-- /.theme_outline -->
 </body>
 </html>
