--- a/htdocs/_PX/themes/sample/plain.html
+++ b/htdocs/_PX/themes/sample/plain.html
@@ -3,14 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <title><?php print t::h($page_info['title']); ?> | <?php print t::h($px->get_conf('project.name')); ?></title>
-<meta name="keywords" content="<?php print t::h($page_info['keywords']); ?>" />
-<meta name="description" content="<?php print t::h($page_info['description']); ?>" />
-<script src="<?php print t::h($px->get_install_path()); ?>common/js/jquery-1.7.2.min.js" type="text/javascript"></script>
 <?php
-	print $px->ssi(implode('/',array($px->get_install_path(),'/common/inc/common_setup.inc')));
-?>
-<link rel="stylesheet" href="<?php print t::h($px->get_install_path()); ?>common/css/common.css" type="text/css" />
-<?php
+	include( $px->get_theme_resource_dir_realpath().'inc/setup.inc' );
 	print $px->theme()->pull_content('head');
 ?>
 </head>
