--- a/htdocs/_PX/themes/sample/popup.html
+++ b/htdocs/_PX/themes/sample/popup.html
@@ -3,24 +3,18 @@
 <head>
 <meta charset="UTF-8" />
 <title><?php print t::h($page_info['title']); ?> | <?php print t::h($px->get_conf('project.name')); ?></title>
-<meta name="keywords" content="<?php print t::h($page_info['keywords']); ?>" />
-<meta name="description" content="<?php print t::h($page_info['description']); ?>" />
-<script src="<?php print t::h($px->get_install_path()); ?>common/js/jquery-1.7.2.min.js" type="text/javascript"></script>
 <?php
-	print $px->ssi(implode('/',array($px->get_install_path(),'/common/inc/common_setup.inc')));
-?>
-<link rel="stylesheet" href="<?php print t::h($px->get_install_path()); ?>common/css/common.css" type="text/css" />
-<?php
+	include( $px->get_theme_resource_dir_realpath().'inc/setup.inc' );
 	print $px->theme()->pull_content('head');
 ?>
 </head>
 <body>
-<div class="outline" id="pagetop">
-<div class="header">
-	<div class="logo"><?php print t::h($px->get_conf('project.name')); ?> (THEME=sample)</div>
-</div><!-- /.header -->
-<div class="middle">
-<div class="column1">
+<div class="theme_outline" id="pagetop">
+<div class="theme_header">
+	<div class="logo"><?php print t::h($px->get_conf('project.name')); ?></div>
+</div><!-- /.theme_header -->
+<div class="theme_middle">
+<div class="theme_column1">
 <h1><?php print t::h( $page_info['title_h1'] ); ?></h1>
 <div id="content" class="contents">
 
@@ -29,14 +23,14 @@
 ?>
 
 </div><!-- /#content -->
-</div><!-- /.column1 -->
-<div class="column2">
-</div><!-- /.column2 -->
-</div><!-- /.middle -->
-<div class="footer">
+</div><!-- /.theme_column1 -->
+<div class="theme_column2">
+</div><!-- /.theme_column2 -->
+</div><!-- /theme_.middle -->
+<div class="theme_footer">
 	<div class="right small">[<a href="#pagetop">ページの先頭へ戻る</a>]</div>
 	<div class="center">[<a href="javascript:window.close();">閉じる</a>]</div>
-</div><!-- /.footer -->
-</div><!-- /.outline -->
+</div><!-- /.theme_footer -->
+</div><!-- /.theme_outline -->
 </body>
 </html>
