$theme->mk_link() が、layout="popup" のページに対して別窓で開くようになった。他。 - $site->load_sitemap_csv() がほんのちょっと軽量になった。 - テーマの処理の開始時点で、$page_info は未定義ということにした。明示的に呼び出してもらうことに。 - テーマ sample がちょっとだけ飾られた。 - Pxコマンド一覧 ページと、テーマの制作でよく使う関数一覧 ページが新設された。

--- a/htdocs/_PX/themes/default/default.html
+++ b/htdocs/_PX/themes/default/default.html
@@ -1,4 +1,6 @@
-<!doctype html>
+<?php
+	$page_info = $this->px->site()->get_current_page_info();
+?><!doctype html>
 <html>
 <head>
 <meta charset="UTF-8" />
