--- a/htdocs/_PX/themes/default/popup.html
+++ b/htdocs/_PX/themes/default/popup.html
@@ -1,4 +1,6 @@
-<!doctype html>
+<?php
+	$page_info = $this->px->site()->get_current_page_info();
+?><!doctype html>
 <html>
 <head>
 <meta charset="UTF-8" />
