--- a/htdocs/_PX/themes/sample/popup.html
+++ b/htdocs/_PX/themes/sample/popup.html
@@ -1,4 +1,6 @@
-<!doctype html>
+<?php
+	$page_info = $this->px->site()->get_current_page_info();
+?><!doctype html>
 <html>
 <head>
 <meta charset="UTF-8" />
@@ -9,7 +11,8 @@
 ?>
 </head>
 <body>
-<div class="theme_outline" id="pagetop">
+<div id="pagetop">
+<div class="theme_outline">
 <div class="theme_header">
 	<div class="logo"><?php print t::h($px->get_conf('project.name')); ?></div>
 </div><!-- /.theme_header -->
@@ -32,5 +35,6 @@
 	<div class="center">[<a href="javascript:window.close();">閉じる</a>]</div>
 </div><!-- /.theme_footer -->
 </div><!-- /.theme_outline -->
+</div><!-- /#pagetop -->
 </body>
 </html>
