--- a/htdocs/_PX/themes/default/default.html
+++ b/htdocs/_PX/themes/default/default.html
@@ -1,39 +1,51 @@
 <?php
+	//↓ $page_info にページの情報を格納しています。
+	//	 test::var_dump( $page_info ); で、変数の内容を確認できます。
 	$page_info = $this->px->site()->get_current_page_info();
 ?><!doctype html>
 <html>
-<head>
-<meta charset="UTF-8" />
-<title><?php print t::h($page_info['title']); ?> | <?php print t::h($px->get_conf('project.name')); ?></title>
-<meta name="keywords" content="<?php print t::h($page_info['keywords']); ?>" />
-<meta name="description" content="<?php print t::h($page_info['description']); ?>" />
-<script src="<?php print t::h($px->get_install_path()); ?>common/js/jquery-1.7.2.min.js" type="text/javascript"></script>
+	<head>
+		<meta charset="UTF-8" />
+<?php /*
+↓ t::h() は、htmlspecialchars() のショートカットです。
+*/ ?>
+		<title><?php print t::h($page_info['title']); ?> | <?php print t::h($px->get_conf('project.name')); ?></title>
+		<meta name="keywords" content="<?php print t::h($page_info['keywords']); ?>" />
+		<meta name="description" content="<?php print t::h($page_info['description']); ?>" />
+		<script src="<?php print t::h($px->get_install_path()); ?>common/js/jquery-1.7.2.min.js" type="text/javascript"></script>
 <?php
 	print $px->ssi(implode('/',array($px->get_install_path(),'/common/inc/common_setup.inc')));
 ?>
-<link rel="stylesheet" href="<?php print t::h($px->get_install_path()); ?>common/css/common.css" type="text/css" />
+		<link rel="stylesheet" href="<?php print t::h($px->get_install_path()); ?>common/css/common.css" type="text/css" />
 <?php
+	//↓コンテンツから受け取った
+	//	headセクション内用のソースを出力しています。
 	print $px->theme()->pull_content('head');
 ?>
-</head>
-<body>
-<div class="outline" id="pagetop">
-<div class="header">
-	<div class="logo"><a href="<?php print t::h( $px->get_install_path() ); ?>"><?php print t::h($px->get_conf('project.name')); ?></a></div>
-</div><!-- /.header -->
-<div class="middle">
-<div class="column1">
-<h1><?php print t::h( $page_info['title_h1'] ); ?></h1>
-<div id="content" class="contents">
+	</head>
+	<body>
+		<div class="outline" id="pagetop">
+			<div class="header">
+				<div class="logo"><a href="<?php print t::h( $px->get_install_path() ); ?>"><?php print t::h($px->get_conf('project.name')); ?></a></div>
+			</div><!-- /.header -->
+			<div class="middle">
+				<div class="column1">
+					<h1><?php print t::h( $page_info['title_h1'] ); ?></h1>
+					<div id="content" class="contents">
 
 <?php
+	//↓コンテンツから受け取った
+	//	コンテンツエリアのソースを出力しています。
 	print $px->theme()->pull_content();
 ?>
 
-</div><!-- /#content -->
-</div><!-- /.column1 -->
-<div class="column2">
-<div class="localnavi">
+					</div><!-- /#content -->
+				</div><!-- /.column1 -->
+				<div class="column2">
+					<div class="localnavi">
+<?php /*
+↓ ここからの記述は、ローカルナビゲーションの自動生成ロジックです。
+*/ ?>
 <?php if( strlen( $page_info['id'] ) ){ ?>
 <?php $parent_page_info = $px->site()->get_page_info( $px->site()->get_parent() ); ?>
 <div><?php print '<a href="'.t::h($px->theme()->href($parent_page_info['path'])).'">'.t::h( $parent_page_info['title_label'] ).'</a>'; ?></div>
@@ -61,14 +73,19 @@
 <?php }//foreach ?>
 </ul>
 <?php }//if ?>
-</div><!-- /.localnavi -->
-</div><!-- /.column2 -->
-</div><!-- /.middle -->
-<div class="footer">
-	<div class="right small">[<a href="#pagetop" class="up">ページの先頭へ戻る</a>]</div>
-	<div class="breadcrumb"><?php print $px->theme()->mk_breadcrumb(); ?></div>
-	<div class="center">[<?php print $px->theme()->mk_link('/'); ?>]</div>
-</div><!-- /.footer -->
-</div><!-- /.outline -->
-</body>
+<?php /*
+↑ ローカルナビゲーションの自動生成ロジックはここで終わりです。
+*/ ?>
+					</div><!-- /.localnavi -->
+
+
+				</div><!-- /.column2 -->
+			</div><!-- /.middle -->
+			<div class="footer">
+				<div class="right small">[<a href="#pagetop" class="up">ページの先頭へ戻る</a>]</div>
+				<div class="breadcrumb"><?php print $px->theme()->mk_breadcrumb(); ?></div>
+				<div class="center">[<?php print $px->theme()->mk_link('/'); ?>]</div>
+			</div><!-- /.footer -->
+		</div><!-- /.outline -->
+	</body>
 </html>
