トップページの文言を変更。

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -13,8 +13,8 @@
 <?php $px->theme()->send_content( ob_get_clean(), 'head' ); ?>
 
 
-<h2>Welcome to Pickles Framework 1.x</h2>
-<p>これはトップページのHTMLソースです。</p>
+<h2>Welcome to Pickles Framework 1.x!!</h2>
+<p>これは、Pickles Framework のトップページです。</p>
 <ul>
 	<li><a href="./_docs/test/">./test/</a></li>
 	<li><a href="./_docs/test/abc.html">./test/abc.html</a></li>
