モジュール集に 段落(p要素) を追加。

--- a/htdocs/_docs/modules/parts/index.html
+++ b/htdocs/_docs/modules/parts/index.html
@@ -10,6 +10,16 @@
 ?>
 
 
+<h2>段落</h2>
+
+<p>段落は、p要素を用いて表現します。</p>
+
+<div class="unit">
+	<div class="code"><textarea readonly="readonly">&lt;p&gt;段落は、p要素を用いて表現します。&lt;/p&gt;
+</textarea></div>
+</div><!-- /.unit -->
+
+
 <h2>見出し</h2>
 
 <p>
