filesディレクトリのパスを得るメソッドを改名。 - $px->get_local_resource_dir() ⇒ $px->path_files() - $px->get_local_resource_dir_realpath() ⇒ $px->realpath_files()

--- a/htdocs/_docs/test/user_test.html
+++ b/htdocs/_docs/test/user_test.html
@@ -6,8 +6,8 @@
 
 <?php
 
-	$path_resource_dir = $px->get_local_resource_dir();
-	$realpath_resource_dir = $px->get_local_resource_dir_realpath();
+	$path_resource_dir = $px->path_files();
+	$realpath_resource_dir = $px->realpath_files();
 	require_once( $realpath_resource_dir.'exec.php' );
 	$cont_exec = new cont_exec($px);
 
