モジュール集ページ 日付入りリスト .date_list の説明文言を修正。

--- a/htdocs/_docs/modules/parts/index.html
+++ b/htdocs/_docs/modules/parts/index.html
@@ -227,13 +227,8 @@
 
 <h2>日付入りリスト .date_list</h2>
 <p>
-	決定事項：【１】クラス名 .date_list、【２】基礎構造はtable要素を使う、【３】.date_list-flag はオプションとなる要素。<br />
+	日付を書くth要素と、内容を書くtd要素は必須の要素です。フラグを表示するtd.date_list-flag要素の要・不要や、フラグの種類、記述フォーマットについては、プロジェクトによって独自に設計する必要があります。<br />
 </p>
-<p>
-	課題：実運用に際し、デザイン・構成が決まる前段階の仮コーディングのための構造として、実用に耐えうるか？<br />
-	⇒1サイト内にそれほど沢山使われるものではないので、このレベルの粒度で仕様化してよい。<br />
-</p>
-
 
 <div class="unit">
 	<div class="date_list">
@@ -368,7 +363,10 @@
 </div><!-- /.unit -->
 
 
-<h2>ソースコード(コピペ用) .code</h2>
+
+<h2>ソースコード</h2>
+
+<h3>コピペ用ソースコード .code</h3>
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;h2&gt;ああああ&lt;/h2&gt;
 </textarea></div>
@@ -384,7 +382,7 @@
 
 
 
-<h2>ソースコード(見てるだけ用) .code</h2>
+<h3>見てるだけ用ソースコード .code</h3>
 <div class="unit">
 	<div class="code"><pre><code>&lt;h2&gt;ああああ&lt;/h2&gt;
 </code></pre></div>
