--- a/htdocs/_docs/modules/index.html
+++ b/htdocs/_docs/modules/index.html
@@ -23,10 +23,11 @@
 
 <h3>モジュール設計方針</h3>
 <p>
-	モジュールの設計について次のように方針を定めます。<br />
+	モジュールは、次の方針に基づいて設計します。<br />
 </p>
 <ul>
 	<li>学習しやすさを重視し、可能な限り、素のHTMLの構造のままでマークアップできるように設計する。</li>
+	<li>少数(多くの場合1人)の管理者と、大勢のコンテンツ制作者との間の約束事であり、管理者が全体を効率よく管理できることを主目的として設計する。</li>
 </ul>
 
 
