コーディング規則ページを更新。 - 文書の位置づけを、モジュール集 から範囲を広げて コーディング規則 と改めた。 - モジュール設計方針 に項目を追加。 - 他細かいところで文書の組み換えなど。

--- a/htdocs/_docs/modules/contents_custom.html
+++ b/htdocs/_docs/modules/contents_custom.html
@@ -1,6 +1,6 @@
 
 <p>
-	コンテンツ独自のCSS、JavaScriptを定義する場合の規則 について記述しています。<br />
+	このページは、コンテンツをコーディングする規則について記述しています。コンテンツ独自のCSS、JavaScriptを定義する場合の規則 についても含みます。<br />
 </p>
 
 <?php
@@ -14,7 +14,11 @@
 	例えば、<code>/abc/def/fhi.html</code> というコンテンツの場合、<code>/abc/def/fhi.files/*</code> を独占的に使うことができます。<br />
 </p>
 
-<h2>コンテンツ独自CSS</h2>
+<p>
+	外部CSS、画像などのリソースファイルはこの中に管理するようにしてください。また、このディレクトリ内での格納規則や命名規則は設けません。<br />
+</p>
+
+<h2>コンテンツ独自CSSを定義する</h2>
 <p>
 	コンテンツが独自に定義するCSSは、サイト全体(テーマ)で一元的に管理されているCSSと干渉し合っては不都合があります。この問題を避けるため、次の規則が設けられました。<br />
 </p>
@@ -26,7 +30,7 @@
 
 
 
-<h2>コンテンツ独自JavaScript</h2>
+<h2>コンテンツ独自JavaScriptを定義する</h2>
 
 <p>
 	コンテンツは独自にJavaSctiptを記述し、埋め込むことができます。<br />
@@ -56,9 +60,35 @@
 </ul>
 
 
-<h2>禁止事項</h2>
+<h2>&lt;head&gt;領域にJavaScriptやCSSを書くには</h2>
+
+<p>
+	<code>$px-&gt;theme()-&gt;send_content()</code> を通じて、コンテンツキャビネット <code>head</code> にソースを送ります。<br />
+</p>
+
+<div class="unit">
+	<div class="code"><pre><code>&lt;?php ob_start(); ?&gt;
+&lt;!-- このソースは、テーマのキャビネット &quot;head&quot; に送られます。 --&gt;
+&lt;style type=&quot;text/css&quot;&gt;
+	/*
+		コンテンツ独自のローカルCSSはここに実装します。
+	*/
+&lt;/style&gt;
+&lt;!--
+または、次のように、外部のCSSを読み込むこともできます。
+---
+&lt;link rel=&quot;stylesheet&quot; href=&quot;./index.files/contents.css&quot; type=&quot;text/css&quot; /&gt;
+--&gt;
+&lt;?php $px-&gt;theme()-&gt;send_content( ob_get_clean(), 'head' ); ?&gt;</code></pre></div>
+</div><!-- /.unit -->
+
+
+
+<h2>その他、禁止事項</h2>
 
 <ul>
-	<li>テーマの管理者によって特に認められている項目を除き、テーマの共通モジュールの一部を拡張して利用してはいけません。この場合、まずはテーマの管理者に拡張してよいか相談した上で問題ない内容で拡張を行うか、またはモジュール単位で全体をコピーし、接頭辞 cont を付加した別のモジュールとして再定義して変更するようにします。</li>
+	<li>テーマによって特に認められている項目を除き、テーマの共通モジュールの一部を拡張して利用してはいけません。この場合、まずはテーマ管理者に拡張してよいか相談した上で問題ない内容で拡張を行うか、またはモジュール単位で全体をコピーし、接頭辞 cont を付加した別のモジュールとして再定義して変更するようにします。</li>
 </ul>
+
+
 
