--- a/htdocs/_docs/modules/index.html
+++ b/htdocs/_docs/modules/index.html
@@ -1,6 +1,4 @@
 
-<p>Pickles Framework 標準のモジュール集です。</p>
-
 <?php
 	print( $px->theme()->autoindex() );
 ?>
@@ -8,13 +6,13 @@
 <h2>概要</h2>
 
 <p>
-	このドキュメントは、コンテンツを構成モジュール定義の一覧を示すものです。<br />
+	このドキュメントは、Pickles Framework が提唱する標準のコーディング規則です。コンテンツを構成するモジュールの定義を含みます。<br />
 </p>
 <p>
-	モジュールは、構成要素単位で構造化されたHTMLとCSSのセットであり、サイト全体の管理者により定義され、コンテンツ個別の制作者に配布されるものです。<br />
+	モジュールは、構成要素単位で構造化されたHTMLとCSSのセットであり、サイト全体の管理者(=テーマの管理者)により定義され、コンテンツ個別の制作者に配布されるものです。<br />
 </p>
 <p>
-	ここで定義されるモジュールは、サイト全体の管理者により、将来の環境や要件の変化を想定して設計されたものであり、コンテンツ制作者には、そのルールに従ってコンテンツを構築することが求められます。<br />
+	ここで定義されるモジュールは、サイト全体の管理者(=テーマの管理者)により、将来の環境や要件の変化を想定して設計されたものであり、コンテンツ制作者には、そのルールに従ってコンテンツを構築することが求められます。<br />
 </p>
 <p>
 	コンテンツ制作者は、ここに定義されていないモジュールを独自に開発することができます(独自モジュール設計規則については<a href="./contents_custom.html">コンテンツ独自モジュールの定義</a>を参照)が、これは通常推奨されません。独自モジュールを多く開発すると、サイト全体のルールが次第に崩れてくる恐れがあり、管理効率が著しく低下するためです。極力、このドキュメントに定義された、管理者によって設計、提供されたモジュールのみを使ってコンテンツを構築するようにしてください。<br />
@@ -26,13 +24,17 @@
 	モジュールは、次の方針に基づいて設計します。<br />
 </p>
 <ul>
-	<li>学習しやすさを重視し、可能な限り、素のHTMLの構造のままでマークアップできるように設計する。</li>
 	<li>少数(多くの場合1人)の管理者と、大勢のコンテンツ制作者との間の約束事であり、管理者が全体を効率よく管理できることを主目的として設計する。</li>
+	<li>学習しやすさを重視し、可能な限り、素のHTMLの構造のままでマークアップできるように設計する。</li>
+	<li>初めてドキュメントを読む人に負担をかけないよう、なるべくドキュメントの分量を圧縮できるように設計する。</li>
 </ul>
 
 
 
 <h2>共通モジュール</h2>
+
+<p>共通モジュールは、それぞれ<strong>スタティックモジュール</strong>、<strong>パーツモジュール</strong>、<strong>ユニットモジュール</strong>の3種類のグループに分類されます。</p>
+
 <dl>
 	<dt><a href="./statics/">スタティックモジュール</a></dt>
 		<dd>スタティックモジュールは、端末の状態(スクリーンの幅など)に影響されず、常に固定の効果を提供します。主に特に基本的でシンプルなショートハンド的なモジュールが含まれます。</dd>
@@ -44,39 +46,16 @@
 
 
 
-<h2>&lt;head&gt;領域にJavaScriptやCSSを書くには</h2>
-
-<p>
-	<code>$px-&gt;theme()-&gt;send_content()</code> を通じて、コンテンツキャビネット <code>head</code> にソースを送ります。<br />
-</p>
-
-<div class="unit">
-	<div class="code"><pre><code>&lt;?php ob_start(); ?&gt;
-&lt;!-- このソースは、テーマのキャビネット &quot;head&quot; に送られます。 --&gt;
-&lt;style type=&quot;text/css&quot;&gt;
-	/*
-		コンテンツ独自のローカルCSSはここに実装します。
-	*/
-&lt;/style&gt;
-&lt;!--
-または、次のように、外部のCSSを読み込むこともできます。
----
-&lt;link rel=&quot;stylesheet&quot; href=&quot;./index.files/contents.css&quot; type=&quot;text/css&quot; /&gt;
---&gt;
-&lt;?php $px-&gt;theme()-&gt;send_content( ob_get_clean(), 'head' ); ?&gt;</code></pre></div>
-</div><!-- /.unit -->
-
-
 
 <h2>命名規則</h2>
 
-<p>Pickles Framework では次の命名規則を規定としています。</p>
+<p>Pickles Framework では次の命名規則を原則としています。</p>
 
 <?php ob_start(); ?>
 <style type="text/css">
 .cont_exam{
 	font-size:90%;
-	color:#999999;
+	color:#888888;
 }
 </style>
 <?php $px->theme()->send_content( ob_get_clean(), 'head' ); ?>
@@ -120,9 +99,7 @@
 
 <p>
 	Pickles Frameworkでは、サイト全体(テーマ)で一元的に管理されているモジュールと干渉しあわないように、いくつかの規則が用意されています。<br />
-	詳しくは、<a href="./contents_custom.html">コンテンツ独自モジュールの定義</a> のページを参照してください。<br />
+	詳しくは、<a href="./contents_custom.html">コンテンツコーディング規則</a> のページを参照してください。<br />
 </p>
-
-
 
 
