モジュール集を更新。 - .unit の内容部分のソースを、 .cols に合わせて表示変更。

--- a/htdocs/_docs/modules/units/index.html
+++ b/htdocs/_docs/modules/units/index.html
@@ -16,7 +16,7 @@
 
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;div class=&quot;unit&quot;&gt;
-	&lt;p&gt;この領域は、パーツモジュールを組み合わせて作成します。&lt;/p&gt;
+	&lt;!-- insert parts modules --&gt;
 &lt;/div&gt;&lt;!-- /.unit --&gt;
 </textarea></div>
 </div><!-- /.unit -->
