コーディング規則の命名規則に、「名称の省略について」を追加。 - 合わせてドキュメントを更新。(同じ内容)

--- a/htdocs/_docs/modules/index.html
+++ b/htdocs/_docs/modules/index.html
@@ -95,6 +95,16 @@
 	</span>
 </p>
 
+<h3>名称の省略について</h3>
+<p>
+	クラス名等の命名に省略形を使用するべきかどうかについて、Pickles Framework では厳密な取り決めは設けませんが、次のような基準を設け、適切な名称を検討するようにします。<br />
+</p>
+<ul>
+	<li>名称は省略せず、フルスペルで命名することを基本とします。これは、フレームワークに慣れない新しいメンバーでも、ソースコードを見るだけである程度の意味や効果を把握できるように配慮するためです。</li>
+	<li>特に頻繁に使用するクラス名には、省略形を用います。これは、タイプする機会が多くなるためミスタイプを防止することにつながること、頻繁に利用するため意味や効果を記憶しやすく、名前から判別しにくくても問題となりにくいことの2点からです。</li>
+	<li>頻繁に使うクラスでも、構造が複雑なモジュールには、フルスペルの名称が適しています。これは、モジュール集からコピー＆ペーストしてコーディングする運用が想定されるため、タイピングのコストやミスタイプのリスクが低いと考えられるためです。</li>
+</ul>
+
 <h2 id="cont_contents_css">コンテンツ独自モジュールを定義する場合の規則</h2>
 
 <p>
