--- a/htdocs/_docs/modules/parts/index.html
+++ b/htdocs/_docs/modules/parts/index.html
@@ -47,7 +47,7 @@
 </div><!-- /.unit -->
 
 
-<h3>アイコン付きリンク</h3>
+<h3>アイコン付きリンク .icon</h3>
 
 <p><a href="./" class="icon">アイコン付きリンク</a></p>
 <div class="unit">
@@ -55,7 +55,7 @@
 </textarea></div>
 </div><!-- /.unit -->
 
-<h3>ページ内リンク(下向き)</h3>
+<h3>ページ内リンク(下向き) .down</h3>
 
 <p><a href="#" class="down">ページ内リンク(下向き)</a></p>
 <div class="unit">
@@ -63,7 +63,7 @@
 </textarea></div>
 </div><!-- /.unit -->
 
-<h3>ページ内リンク(上向き)</h3>
+<h3>ページ内リンク(上向き) .up</h3>
 
 <p><a href="#" class="up">ページ内リンク(上向き)</a></p>
 <div class="unit">
@@ -71,7 +71,7 @@
 </textarea></div>
 </div><!-- /.unit -->
 
-<h3>戻るリンク</h3>
+<h3>戻るリンク .back</h3>
 
 <p><a href="./" class="back">戻るリンク</a></p>
 <div class="unit">
@@ -85,7 +85,7 @@
 <p>付加リンクモジュールは、&lt;a&gt;要素の内側に&lt;span&gt;要素を組み込んで使用します。付加リンク単体での使用(=&lt;a&gt;要素に直接クラスを指定しての使用)はできません。</p>
 <p>次に示す例は、<q>通常のインラインリンク</q> に付加した場合の実装を示しています。</p>
 
-<h4>別ウィンドウリンク</h4>
+<h4>別ウィンドウリンク .blank</h4>
 
 <p><a href="./" target="_blank"><span class="blank">別ウィンドウリンク</span></a></p>
 <div class="unit">
@@ -94,7 +94,7 @@
 </div><!-- /.unit -->
 
 
-<h4>ダウンロードリンク</h4>
+<h4>ダウンロードリンク .download</h4>
 
 <p><a href="./"><span class="download">ダウンロードリンク</span></a></p>
 <div class="unit">
@@ -102,7 +102,7 @@
 </textarea></div>
 </div><!-- /.unit -->
 
-<h4>PDF</h4>
+<h4>PDF .pdf</h4>
 
 <p><a href="./"><span class="pdf">PDFファイル名</span></a></p>
 <div class="unit">
